# dotfiles

./: .Brewfile  .Dockerfile  .aerospace.toml  .alacritty.yml  .dockerignore  .gitconfig  .gitconfig-mediamarktsaturn  .gitconfig-pixelcombo  .gitignore  .gitignore_global  .gitmessage  .markdownlint.yaml  .pacmanfile  .stCommitMsg  .tmux.conf  .tmux.conf.local  .vimrc  .weather  .zshrc  Dockerfile  Makefile  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.config/: starship.toml  topgrade.toml
.config/alacritty/: alacritty.yml
.config/atuin/: config.toml
.config/bat/: config
.config/btop/: btop.conf
.config/fastfetch/: config.jsonc
.config/fish/: config.fish  fish_plugins  fish_variables
.config/gh/: config.yml
.config/ghostty/: config
.config/git/: allowed_signers  config  config-pixelcombo  config-private  ignore
.config/infat/: config.toml
.config/karabiner/: karabiner.json
.config/kitty/: kitty.conf
.config/lazygit/: config.yml
.config/macchina/: macchina.toml
.config/mise/: config.toml
.config/msmtp/: config
.config/neru/: config.toml
.config/newsboat/: config  history.search  kitty-img-pager.sh  urls
.config/nvim/: .netrwhist  functions.vim  init.lua  init.vim  keybindings.vim  lazy-lock.json  plugins.vim
.config/pet/: config.toml  snippet.toml
.config/ringo/: .gitignore  phone-wrapper.sh  render-ringo-profile.sh  ringo.toml
.config/sesh/: sesh.toml
.dotfileassets/: digitalocean-cloudinit.yaml  gen_keymapping_md_table.sh  multipass-docker.yaml  osx_settings.sh
.github/: CODEOWNERS  dependabot.yml
.hammerspoon/: init.lua
.newsboat/: config  urls
.ssh/: config
.tests/: 0_yadm.bats  1_fish.bats  2_nvim.bats  3_tmux.bats  9_done.bats
tests/: 0_yadm.bats  1_fish.bats  2_nvim.bats  conftest.py  fish.bats  nvim.bats  test_bootstrap.py  test_fish.py  test_nvim.py  test_smoke.py  test_tmux.py
(+136 files in other folders)
