[project]
name = "dotfiles-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-rerunfailures>=16.1",
    "libtmux>=0.55.1",
    "gitpython==3.1.32",
    "pynetbox==7.6.1",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Quick version/binary checks",
    "bootstrap: Bootstrap and installation tests",
    "integration: Multi-step integration tests",
    "flaky: Known flaky tests (use sparingly)",
]
timeout = 300
