[project]
name = "dotfiles-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-rerunfailures>=16.2",
    "libtmux>=0.58.0",
    "gitpython==3.1.50",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Quick version/binary checks",
    "bootstrap: Bootstrap and installation tests",
    "integration: Multi-step integration tests",
    "flaky: Known flaky tests (use sparingly)",
]
timeout = 300
